--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>Welcome to Visual Art Notes</h1>
     <p><em>Various</em> ideas and principals that influence visual art.</p>
     <ul>
-      <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-1/index.html "></a></li>
-      <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-2/index.html "></a></li>
+      <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-1/index.html">activity-1</a></li>
+      <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-2/index.html">activity-2</a></li>
     </ul>
 </body>
