--- a/activity-2/index.html
+++ b/activity-2/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Welcome to Visual Art Notes</h1>
     <p><em>Various</em> ideas and principals that influence visual art.</p>
-<img src="C:\Users\drkbr\Desktop\JSCRPT\stock-photo-oil-paints-and-paint-brushes.jpg" alt="Tools of the trade" width="400" height="300" align="center">
+<img src="activity-2\stock-photo-oil-paints-and-paint-brushes.jpg" alt="Tools of the trade" width="400" height="300" align="center">
 <br />
 <br />
 <table  id=”simple-table”>
