--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
       <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-1/index.html">activity-1</a></li>
       <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-2/index.html">activity-2</a></li>
       <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-3/index.html">activity-3</a></li>
+      <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-4/index.html">activity-3</a></li>
     </ul>
 </body>
