--- a/activity-4/index.html
+++ b/activity-4/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans">
 </head>
  <body>
-   <div id="greeting"></div>
+   <p id="greeting"></p>
    <h1>Print Making Tool Review</h1>
    <p>An <em>Objective</em> Review of tools and materials used in producing visual art.</p>
 <main>
@@ -20,6 +20,8 @@
         <img src="images\speedball squeege.jpg">
         <figcaption>Fig.1 60 durometer squeegee.</figcaption>
       </figure>
+      <p id="price"></p>
+      <p id="studentPrice"></p>
       <h3>Description:</h3>
    <p>The squeegee is typically used in screen printing as it either pulls or pushes ink through a fine mesh stencil that registers on a substrate such as paper or fabric.
 Squeegees are measured by durometer  which is the rigidity of the plastic or urethane blade which is seated inside a handle. Durometer scale ranges from 60 being softest to 80 being the hardest in regards to the use of this tool.</p>
@@ -63,7 +65,6 @@ The Richeson etching tool that i picked up from Blick is piece of solid machined
       <footer>
 
       </footer>
-      <script src=”js/scripts.js”>
-      </script>
+      <script src="js/scripts.js"></script>
    </body>
    </html>
