--- a/derek-barker-project1/project1.html
+++ b/derek-barker-project1/project1.html
@@ -7,7 +7,7 @@
   <div id="content">
   <div id="greeting" class="welcome">hi</div>
   <title>Product Review</title>
-  <link rel="stylesheet" type="text/css" href="css/master.css">
+  <link rel="stylesheet" type="text/css" href="C:\Users\drkbr\Desktop\JSCRPT\Derek-Barker-itdev160\derek-barker-project1\css\master.css">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans">
  </head>
  <body>
@@ -55,7 +55,7 @@
 </table>
 
    <h2>Speedball Screen Printing squeegee</h2>
-   <img src="images\speedball squeege.jpg" alt="Tools of the trade" width="400" height="300" align="center">
+   <img src="derek-barker-project1\images\speedball squeege.jpg" alt="Tools of the trade" width="400" height="300" align="center">
 
 
    <p class="title">Price $
@@ -76,7 +76,7 @@ with its initial use I could tell that the pine handle was properly weighted and
 
    <h2>Speedball Block printing brayer</h2>
    <figure>
-   <img src="images\speedball brayer.jpg">
+   <img src="derek-barker-project1\images\speedball brayer.jpg">
    </figure>
    <h3>Description:</h3>
    <p>The brayer is a tool that is used in both  monoprinting, linocut and lithography it is used to apply ink evenly in some instances and registration in others. The brayer is composed of a roller of either hard or soft rubber of a specific durometer which sits on an axle that is attached to a handle.</p>
@@ -90,7 +90,7 @@ The application of ink is even with no sticking or hesitation the urethane gromm
 </p>
 
    <h2>Richeson Twisted Etching Tool</h2>
-   <img src="images\Richeson Twisted Etching Tool.jpg" alt="Tools of the trade" width="400" height="300" align="center">
+   <img src="derek-barker-project1\images\Richeson Twisted Etching Tool.jpg" alt="Tools of the trade" width="400" height="300" align="center">
    <h3>Description:</h3>
    <p>Etching tools are typically needles some are steel points seated in a wooden handle and some solid pieces of machined steel sharpened to a point. An etching tool is used in conjunction with a zinc plate which performs the registration, etching is nether additive or subtractive it is a process of displacement of material that creates and image. The tool is held firmly like a pencil at time and at other like a knife the soft nature of zinc allows it be scored just below its surface the material is displace from the score creating a burl this burling effect helps to determine light and darks during registration as ink is rubbed into the score and burl and then picked up by a paper substrate during printing.</p>
 
