--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
       <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-3/index.html">activity-3</a></li>
       <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-4/index.html">activity-4</a></li>
       <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-5/index.html">activity-5</a></li>
+      <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-6/index.html">activity-6</a></li>
     </ul>
 </body>
