--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
       <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-4/index.html">activity-4</a></li>
       <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-5/index.html">activity-5</a></li>
       <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-6/index.html">activity-6</a></li>
+      <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/derek-barker-project1/index.html">derek-barker-project1</a></li>
+      <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-8/index.html">activity-8</a></li>
+      <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/derek-barker-project2/index.html">derek-barker-project2</a></li>
+      <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-9/index.html">activity-9</a></li>
+      <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/derek-barker-project3/index.html">derek-barker-project3</a></li>
     </ul>
 </body>
