--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
       <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-8/index.html">activity-8</a></li>
       <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/derek-barker-project2/index.html">derek-barker-project2</a></li>
       <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/activity-9/index.html">activity-9</a></li>
+      <li><a href="https://github.com/barkerd2/Derek-Barker-itdev160.git/derek-barker-project3/index.html">derek-barker-project2</a></li>
     </ul>
 </body>
